# 2021-rome-ee

./: .gitattributes  Pipfile  README.md
Green500/: Readme.md  charts.ipynb  green500_top_202011.xlsx
L3 bandwidth/: L3-bandwidth-Core0-Core1-frequencies-reduced.ipynb  L3-bandwidth-Core0-Core1-frequencies.ipynb  README.md
L3-frequencies/: README.md  memory-latency-Core0-Core1-frequencies-pandas.ipynb  memory-latency-Core0-Core1-frequencies-reduced.ipynb  memory-latency-Core0-Core1-frequencies.ipynb
RAM bandwidth/: README.md
RAM latency/: README.md  memory-latency-1S-RAM-frequencies-heatmap.ipynb
RAPL_resoultion/: README.md  out  out_package  test.c
concurrency throughput/: README.md  throughput-frequencies.ipynb
cstate/: README.md  out.perf.data.local_callee.state2.1500000.8.9  out.perf.data.local_callee.state2.2200000.8.9  out.perf.data.local_callee.state2.2500000.8.9  out.perf.data.local_caller.state1.1500000.8.9  out.perf.data.local_caller.state1.2200000.8.9  out.perf.data.local_caller.state1.2500000.8.9  out.perf.data.local_caller.state2.1500000.8.9  out.perf.data.local_caller.state2.2200000.8.9  parse_C6.ipynb  (+20 more)
data_rapl_stats/: CMakeLists.txt  README.md  charts.ipynb  kernel.h  main.cpp  run.sh  run_v2.sh
data_rapl_stats/results/shr/: conway-ht-noturbo-10000ms-2001.csv  conway-ht-noturbo-10000ms-3001.csv  conway-ht-noturbo-100ms-200001.csv  conway-ht-noturbo-100ms-300001.csv
data_rapl_stats/results/xor0/: conway-ht-noturbo-10000ms-2001.csv  conway-ht-noturbo-10000ms-3001.csv  conway-ht-noturbo-100ms-200001.csv  conway-ht-noturbo-100ms-300001.csv
(+8766 files in other folders)
